03-containerized-kubernetes/sp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shinyproxy
spec:
  selector:
    matchLabels:
      run: shinyproxy
  replicas: 1
  template:
    metadata:
      labels:
        run: shinyproxy
    spec:
      containers:
      - name: shinyproxy
        image: hackyacr.azurecr.io/shinyproxy-example:v1
        #imagePullPolicy: Never
        ports:
        - containerPort: 8080
      - name: kube-proxy-sidecar
        image: hackyacr.azurecr.io/kube-proxy-sidecar:v1
        #imagePullPolicy: Never
        ports:
        - containerPort: 8001
