03-containerized-kubernetes/sp-ingress-route.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: shinyproxy
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    #nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - agresearch.australiaeast.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: agresearch.australiaeast.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: shinyproxy
          servicePort: 8080
        path: /
